# NiceVibrations

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build-platform.sh  build.sh  bump-sdk-version.sh  bump-unity-version.sh  ci-all.sh  ci-android.sh  ci-ios.sh  ci-rust-core.sh  ci-unity-editor-plugin.sh  ci-unity.sh  clean-ios-rust.sh  release-haptic2ahap.sh  release-internal-app.sh  release-sdk.sh  test-on-device.sh  update-license-file.sh
clip-players/: Cargo.toml  README.md
clip-players/src/: android.rs  haptic_event_provider.rs  lib.rs  null.rs  streaming.rs  test_utils.rs
clip-players/src/test_data/: amplitude_only.haptic  different_times.haptic  different_times_2.haptic  emphasis_at_end.haptic  emphasis_at_start.haptic  first_amp_bp_not_time_0.haptic  first_freq_bp_not_time_0.haptic  more_amplitude_bps.haptic  more_frequency_bps.haptic  normal.haptic  normal_with_1_emphasis.haptic  normal_with_2_emphasis.haptic  one_amp_bp.haptic  one_amp_bp_multiple_freq_bps.haptic  one_freq_bp.haptic  ramp_up.haptic
core/api/: Cargo.toml  build.rs
core/api/src/: c_api.rs  c_errors.rs  jni_api.rs  lib.rs
core/datamodel/: ARCHIVE.md  Cargo.toml  README.md
core/datamodel/benches/: datamodel_benches.rs
core/datamodel/benches/data/: v0-0.5.vij  v0-1.vij  v0-10.vij  v0-120.vij  v0-60.vij  v1-0.5.haptic  v1-1.haptic  v1-10.haptic  v1-120.haptic  v1-60.haptic
core/datamodel/media/: v1-diag.drawio
core/datamodel/src/: emphasis.rs  interpolation.rs  ios.rs  lib.rs  test_utils.rs  v0.rs  v1.rs  version.rs  waveform.rs
core/datamodel/src/ios/: v1.rs
core/datamodel/src/test_data/: invalid_fields_v1.haptic  invalid_v0_conversion.vij  invalid_v0_conversions_transients.vij  invalid_v0_opz.vij  invalid_v0_transient_mismatch.vij  invalid_version_v1.haptic  no_envelopes_v0.vij  truncate_after_2_bp.haptic  truncate_after_end.haptic  truncate_after_with_empty_frequency_after.haptic  truncate_before.haptic  truncate_before_1_bp.haptic  truncate_before_2_bp.haptic  truncate_with_empty_frequency_after.haptic  truncate_with_empty_frequency_before.haptic  v1_additional_fields.haptic  valid_beta_impulses.haptic  valid_required_v1.haptic  valid_v0.vij  valid_v0_conversion.vij  valid_v0_from_dsp.vij  valid_v0_transient_time_mismatch.vij  valid_v1.ahap  valid_v1.haptic  valid_v1_from_invalid_v0_conversion.haptic  valid_v1_from_invalid_v0_conversions_transients.haptic  valid_v1_from_v0.haptic  (+8 more)
core/lib/: Cargo.toml
core/lib/src/: lib.rs
unity-editor-plugin/: Cargo.toml  README.md  build-shared-library.sh
unity-editor-plugin/src/: algorithm.rs  api.rs  lib.rs
unity-editor-plugin/src/test_data/: amplitude_envelope_silent.haptic  amplitude_only.haptic  breakpoints_close_together.haptic  different_amplitude_frequency_timings.haptic  emphasis.haptic  frequency_envelope_silent.haptic  same_amplitude_frequency_timings.haptic
(+402 files in other folders)
