[package]
name = "datamodel"
version = "0.3.0"
authors = ["João Freire <joao@lofelt.com>", "Thomas McGuire <thomas@lofelt.com>", "Tomash Ghz <tomash@lofelt.com>"]
edition = "2018"
repository = "ssh://git@github.com/lofelt/lofelt-sdk.git"
description = "The schema of the Lofelt SDK data model as well as related functions, conversions, and versioning."

[dependencies]
itertools-num = "0.1.3"
serde = { version="1.0.105", features = ["derive"] }
serde_json = "1.0.48"
typescript-definitions-local= {path = "../../third-party/typescript-definitions"}
utils = {path = "../utils"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "datamodel_benches"
harness = false
