[package]
name = "lib"
version = "1.3.4"
authors = ["João Freire <joao@lofelt.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
datamodel = {path = "../datamodel"}
clip-players = {path = "../../clip-players"}
utils = {path = "../utils"}
log = "0.4"
